--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -6,3 +6,7 @@
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+
+<p>The Data Services Team<br/>
+International Trade Administration<br/>
+<%= link_to Rails.configuration.developerportal_url, Rails.configuration.developerportal_url %></p>
