API Key Registration Form Squished on Phone
[#94583238]

--- a/app/assets/stylesheets/customizations.css.scss
+++ b/app/assets/stylesheets/customizations.css.scss
@@ -97,9 +97,12 @@
   #body-content {
     .form-wrapper {
       form {
+        &#new_registration {
+          width: 100%;
+        }
         .field {
           input {
-            width: 6rem;
+            width: 8rem;
           }
         }
       }
