Form width 100% at narrow window resolutions.

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Send reset instructions" %>
+      <%= f.submit "Send instructions" %>
     </div>
   <% end %>
 
