--- a/app/assets/stylesheets/customizations.css.scss
+++ b/app/assets/stylesheets/customizations.css.scss
@@ -97,7 +97,8 @@
   #body-content {
     .form-wrapper {
       form {
-        &#new_registration {
+        width: 100%;
+        &#new_registration, &#edit_registration, &#edit_password {
           width: 100%;
         }
         .field {
