Administrator can automagically generate a search API from an uploaded CSV file

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -779,5 +779,9 @@ font-size:6px;
 
 }
 
+textarea#data_source_dictionary {
+  width: 100%;
+}
+
 @import 'bootstrap.css.scss';
 @import 'customizations.css.scss';
