[#107724824] Developer sees Totals, Offsets, Sources Used, and Results fields
- added total, offset, sourced_used, results as top level fields in response
- removed created_at, updated_at, _id from each results entry
- refactored complex load_model_class method

--- a/lib/elasticsearch/templates/document.rb.erb
+++ b/lib/elasticsearch/templates/document.rb.erb
@@ -18,6 +18,14 @@ module Webservices
           attribute :<%= field %>, <%= TYPE_TO_MAPPING[metadata[:type]][:type] %>
         <% end %>
       <% end %>
+
+      def attributes
+        hash = {}
+        <% data_source.yaml_dictionary.each_key do |field| %>
+          hash['<%= field %>'] = nil
+        <% end %>
+        hash
+      end
     end
   end
 end
