--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,9 @@
 <header id="full">
   <h3>API Key</h3>
     <p class="view"><%= link_to('Get an API Key', authenticated_root_path) %></p>
-    <p class="view"><%= link_to('Manage Your API Key', authenticated_root_path) %></p>
   <br/>
-  <h3>Top APIs</h3>
-  <% top_apis.each do |text, path| %>
-    <p class="view"><%= link_to(text, "#{Rails.configuration.developerportal_url}/#{path}") %></p>
-  <% end %>
-  <h3>API Resources</h3>
-  <% api_resources.each do |text, path| %>
+  <h3>Available APIs</h3>
+  <% available_apis.each do |text, path| %>
     <p class="view"><%= link_to(text, "#{Rails.configuration.developerportal_url}/#{path}") %></p>
   <% end %>
   <%- if current_user && current_user.admin? %>
